<resources>
    <string name="app_name">converter</string>
    <string name="meter">meter</string>
    <string name="m">m</string>
    <string name="foot">foot</string>
    <string name="ft">ft</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="clr">CLR</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="r">R</string>
    <string name="_00">00</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="del">del</string>
    <string name="ans">ans</string>
</resources>